makes it look pretty and fixes alignment issues

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,7 +17,8 @@
 body {
   color: var(--off-black);
   font-family: Lato;
-  margin: 0;
+  margin: 1em;
+  background-color: var(--dark-blue);
 }
 
 * {box-sizing: border-box;}
@@ -27,6 +28,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  background-color: #fff;
 }
 
 .primary-header {
@@ -45,7 +47,7 @@ body {
 }
 
 .questions {
-    padding: 1em;
+    /*padding: 0 1em 1em 1em;*/
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -58,14 +60,15 @@ body {
 }
 
 .question {
-    
+    padding: 1em;
     border-bottom: 1px solid var(--off-white);
     margin-bottom: .5em
 
 }
 
 .question-text {
-    margin: 0
+    margin: 0;
+    margin-bottom: .5em
 }
 
 .answer-list {
@@ -76,15 +79,16 @@ body {
 
 }
 
-.answer {display:flex; align-items: center; }
+.answer {display:flex; align-items: center; cursor: pointer;}
 .answer-checkbox {
     visibility: hidden;
-    width: 48px;
-    height: 48px;
+    width: 0;
+    height: 0;
     vertical-align: middle;
-    margin: .25em
+    margin: 0;
 }
 .question-header {display: none}
+.label-text {margin-left:1em; vertical-align: middle; cursor: pointer;}
 
 @media screen and (min-width: 700px) {
     .question-header {display: block;}
@@ -112,6 +116,7 @@ body {
     }
     .question-header {
         padding-left: 180px;
+        margin:1em 1em 0 1em;
     }
     .answer-header-label, .answer {
         flex:1;
@@ -151,6 +156,7 @@ body {
     text-align: center;
     line-height: 48px;
     cursor: pointer;
+    vertical-align: middle;
 }
 
 .answer-checkbox:checked + .answer-label::before {
@@ -182,7 +188,13 @@ body {
 
 .button {
     width: 100%;
-    height: 64px;
+    height: 4em;
     background-color: var(--dark-blue);
+    border:none;
+    border-radius: 4px;
+    font-family: Lato;
+    font-size: 1.25em;
+    box-shadow: 0 2px 0 rgba(0,0,0,0.5);
+    color: #fff;
 }
 
